# coin

./: .gitignore  CMakeLists.txt  README.md  d
client/: CMakeLists.txt
client/include/: client.h  command.h  network.h  transaction.h
client/lib/: client.c  command.c  network.c  transaction.c
client/src/: main.c
client/tests/: test_transaction.c
coin_protocol/: CMakeLists.txt
coin_protocol/include/: block.h  genesis.h  merkle.h  message.h  protocol.h  state.h  transaction.h  util.h  validation.h  wallet.h
coin_protocol/src/: block.c  genesis.c  merkle.c  message.c  protocol.c  state.c  transaction.c  util.c  validation.c  wallet.c
coin_protocol/tests/: test_block.c
node/: CMakeLists.txt
node/include/: handler.h  node.h  server.h  validation.h
node/lib/: handler.c  node.c  server.c  validation.c
node/src/: main.c
validator/: CMakeLists.txt
validator/src/: main.c
